--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ h1 {
 
 .app {
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   position: relative;
   background-color: rgba(0,0,0,0.4);
   color: #fff;
@@ -32,10 +32,10 @@ h1 {
 
 .app:before {
   content: '';
-  background: url('./assets/sunset.jpg') no-repeat center center/cover;
+  background: url('./assets/sunset2.jpg') no-repeat center center/cover;
   position: absolute;
   width: 100%;
-  height: 120%;
+  height: 100%;
   top: 0;
   left: 0;
   z-index: -1;
@@ -50,7 +50,7 @@ h1 {
   padding: .7rem 1.5rem;
   font-size: 1.2rem;
   border-radius: 25px;
-  border: 1px solid rgba(255,255,255, 0.8);
+  border: 1px solid rgba(210, 247, 5, 0.8);
   background: rgba(255,255,255, 0.1);
   color: #f8f8f8;
 }
